<resources>
    <string name="app_name">MMU Hub</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_mmls">MMLSActivity</string>

    <string name="content_authority">com.github.hiiyl.mmuhub</string>
    <string name="sync_account_type">MMU Hub</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_announcement_detail">AnnouncementDetailActivity</string>
    <string name="title_activity_bulletin">BulletinActivity</string>
    <string name="title_activity_download">DownloadActivity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="menu">Menu</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bulletin_detail">BulletinDetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_sync">Sync Frequency</string>
    <string name="pref_sync_summ">Turn sync on or off</string>
    <string name="inline_preferences">Preferences</string>
    <string name="title_checkbox_preference">checkbox</string>
    <string name="summary_checkbox_preference">its a checkbox</string>
    <string name="dialog_based_preferences">dialog</string>
    <string name="title_edittext_preference">edittext</string>
    <string name="dialog_title_edittext_preference">editext tile</string>
    <string name="summary_edittext_preference">editext duh</string>
    <string name="title_list_preference">list title</string>
    <string name="summary_list_preference">wow</string>
    <string name="dialog_title_list_preference">Sync Refresh Interval</string>
    <string name="launch_preferences">launch preference</string>
    <string name="title_screen_preference">title screen</string>
    <string name="summary_screen_preference">summary screen</string>
    <string name="title_next_screen_toggle_preference">next title</string>
    <string name="summary_next_screen_toggle_preference">summary</string>
    <string name="title_intent_preference">title</string>
    <string name="summary_intent_preference">summary title</string>
    <string name="preference_attributes">attributes</string>
    <string name="title_parent_preference">title preference</string>
    <string name="summary_parent_preference">parent preference</string>
    <string name="title_child_preference">title preference</string>
    <string name="summary_child_preference">child preference</string>
    <string name="sync_preferences">Sync Preferences</string>
    <string name="sync_checkbox_pereference">Enable Sync</string>
    <string name="summary_sync_preference">Enable syncing with MMLS</string>
    <string name="sync_interval_list_preference">Sync Interval</string>
    <string name="summary_sync_interval_list_preference">Adjust interval between syncs</string>
    <string name="sync_interval">sync interval</string>
    <string name="notifications_category">Notifications</string>
    <string name="title_activity_student_center">StudentCenterActivity</string>

    <string name="facebook_app_id">1586406014977971</string>
</resources>
